welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: not found: value veresLAvant
  if (veresLAvant==true){
      ^